bugfix spacing between paragraphs and Featured catch the last category without clear

--- a/wp-content/themes/wt_metro/css/common.css
+++ b/wp-content/themes/wt_metro/css/common.css
@@ -140,7 +140,7 @@ td {
 }
 
 p{
-	margin-bottom: 15px;
+	margin-bottom: 15px !important;
 }
 
 img{
